# vuln-scan-cannon-harness

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERMUTATION.md  README.md  SECURITY.md  deny.toml  fleet.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench-owasp/BenchmarkTest00001/: labels.json
bench-owasp/BenchmarkTest00002/: labels.json
bench-owasp/BenchmarkTest00006/: labels.json
bench-owasp/BenchmarkTest00007/: labels.json
bench-owasp/BenchmarkTest00008/: labels.json
bench-owasp/BenchmarkTest00011/: labels.json
docs/: how-it-works.html  index.html  robots.txt  sitemap.xml
prompts/: chain.md  dedup.md  dynamic_find.md  evolve_mutate.md  find.md  intel_research.md  metamorphic.md  patch.md  patch_review.md  recon.md  repo_map.md  system.md  threat_model.md  verify.md
reference-python/: pyproject.toml
reference-python/cannon/: __init__.py  agent.py  artifacts.py  cli.py  config.py  context.py  framing.py  permute.py  prompts.py  runner.py  viz.py
reference-python/cannon/detectors/: static_review.py
reference-python/cannon/stages/: chain.py  find.py  recon.py  report.py  threat_model.py  verify.py
src/: agent.rs  artifacts.rs  bench.rs  config.rs  context.rs  detector.rs  dynamic.rs  fleet.rs  framing.rs  ledger.rs  lock.rs  main.rs  metamorphic.rs  permute.rs  prompts.rs  queue.rs  repomap.rs  runner.rs  sarif.rs  secrets.rs  seed.rs  tune.rs  ui.rs  viz.rs
tests/: e2e_smoke.rs
(+41 files in other folders)
