[package]
name = "cannon"
version = "0.1.0"
edition = "2021"
description = "Fire salvos of permuted defending-code scans at a target, then accumulate, triage, attack-chain, and visualize — in a Ratatui cockpit."

[[bin]]
name = "cannon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
regex = "1"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
base64 = "0.22"

[profile.release]
opt-level = 2
