[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-scan-cannon-harness"
version = "0.1.0"
description = "Fire salvos of permuted 'defending-code' scans at a target, then accumulate, triage, attack-chain, and visualize."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
cannon = "cannon.cli:main"

[tool.setuptools]
packages = ["cannon", "cannon.stages", "cannon.detectors"]
